--- a/Tp1/Entregables/css/estilo.css
+++ b/Tp1/Entregables/css/estilo.css
@@ -1,3 +1,14 @@
-body {margin: 0px;
-        background: chocolate;}
-canvas {background:#d9d9d9; display:block;}
+body { 
+        margin: 0px;
+        background-image: url("../imagen/madera-vintage.jpg"); 
+        background-position: center center;
+}
+canvas{
+        background-color: white; 
+        border: 5px solid #d0d0d0;
+        background-position: center center;
+}
+
+h3{
+        color: white;
+}
